@@ -89,3 +89,4 @@ Current
 	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
 	- Chakora: Use POSIX::RT::Timer.
 	- API: Added flaglist_add flaglist_del and flag_exists
+	- Chakora: Added chanserv/register and full status sync subs, channel and user member of channel trackers and bug fixes.
